--- a/src/colors.css
+++ b/src/colors.css
@@ -1,7 +1,8 @@
 :root {
-  --cyan: #dff8eb;
+  --cyan: #f0f0f0;
   --pink: #a28f9d;
   --nickel: #74776b;
-  --wenge: #5c574f;
-  --green: #48483a;
+  --silver: #C1BCAC;
+  --gray: #B7C8B5;
+  --black: #36454F;
 }
